# Chat-Server

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: Public.h
include/server/: ChatServer.h  ChatService.h
include/server/database/: MySQL.h
include/server/model/: FriendModel.h  Group.h  GroupModel.h  GroupUser.h  OfflineMessageModel.h  User.h  UserModel.h
include/server/redis/: Redis.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/database/: MySQL.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMessageModel.cpp  UserModel.cpp
src/server/redis/: Redis.cpp
